# Reminiscence

./: .gitignore  :w  CMakeLists.txt  README.md  compile.zsh  compile_commands.json  generate_daily_task_program.py  test.yaml
app/: main.cpp
cmake/: ExecutableAndBuildingLibrary.cmake  Fetch.cmake  Option.cmake  SourcesAndHeaders.cmake  Utilities.cmake
data/: program.yaml
data/1/: chap3_adresse_bytes_octet.yaml  chap3_auto.yaml  chap3_constante.yaml  chap3_initialisation.yaml  chap3_types_de_base.yaml  chap3_types_derives.yaml  chap3_using.yaml  chap3_vocabulaire.yaml  chap3_volatile.yaml  chap4_conversions_implicites.yaml  chap4_instruction_expression.yaml  chap4_operateur_affectation.yaml  chap4_operateur_arithmetiques.yaml  chap4_operateur_cast_conditionel_sequentiel_sizeof.yaml  chap4_operateur_de_increment.yaml  chap4_operateur_liste_priorite.yaml  chap4_operateur_sur_bits.yaml  chap4_operateurs_logiques.yaml  chap4_operateurs_relationnels.yaml  chap6_bloc_if.yaml  chap6_for.yaml  chap6_goto_break_continue.yaml  chap6_switch_while.yaml  template_question.yaml
data/2/: EOL.yaml  comment.yaml  rules_identificator.yaml  separator.yaml
data/3/: if_syntaxe.yaml
data/tmp/: q1.yaml  q2.yaml  q3.yaml  q4.yaml  q5.yaml
include/: dailytask.hpp  question.hpp
src/: dailytask.cpp  question.cpp
test/: CMakeLists.txt
